# server/src/routes/index.js
@@ -1,6 +1,12 @@
 const router = require('express').Router();
 const { controller: articleController } = require('../api/v1/article');
+const { controller: authController } = require('../api/v1/authentication');
 
+// auth route
+router.post('/api/v1/auth/signUp', authController.register);
+router.post('/api/v1/auth/signin', authController.login);
+
+// article route
 router.route('/api/v1/articles').get(articleController.findAll).post(articleController.create);
 
 router
